Simple Image Display just a cross section 31